# Projeto---Assistente-RAG-para-documenta-o-t-cnica

./: .gitignore  README.md  env.example  pyproject.toml
data/chroma/8756a9a1-29ff-481d-be01-71ff0fb45903/: index_metadata.pickle
src/observability/: trace.py
src/pipeline/: ___All_Errors.txt  ____init__.py_Error.txt  cache.py  rag.py  routing.py  tools.py
src/projeto_portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ui/: streamlit_app.py
tests/: bench.py  test_smoke.py
